--- a/src/app/game-control/game-control.component.html
+++ b/src/app/game-control/game-control.component.html
@@ -1,3 +1,3 @@
-<button class="btn btn-success">Start game</button>
+<button class="btn btn-success" (click)="ngStartGame()">Start game</button>
 
-<button class="btn btn-danger">Pause game</button>
+<button class="btn btn-danger" (click)="ngPauseGame()" >Pause game</button>
